# FiV_Mobile_Applikasjoner

./: README.md
Noteio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  sidemenu.cpp  sidemenu.h  styles.cpp  styles.h  todo.h
UML/: .$Class Diagram.png.bkp  .$Class Diagram.png.dtmp  .$HomePage layout.png.dtmp
python/: .gitignore  pyproject.toml
python/api/api/: settings.py  urls.py
python/api/noteio/: apps.py  models.py  serializers.py  urls.py  views.py
qtproject/: CMakeLists.txt  calendarpanel.cpp  calendarpanel.h  database.cpp  database.h  homepage.cpp  homepage.h  login.cpp  login.h  main.cpp  maincontent.cpp  maincontent.h  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  profilepage.cpp  profilepage.h  resources.qrc  sidemenu.cpp  sidemenu.h  styles.cpp  styles.h  todo.cpp  todo.h  todopage.cpp  todopage.h  user.cpp  user.h
